--- a/GestionIPS.Backend/Web.config
+++ b/GestionIPS.Backend/Web.config
@@ -9,10 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data source=INGSOFTWARE-CH\SQLEXPRESS;Initial Catalog=Zero;User ID=sa;Password=sa" providerName="System.Data.SqlClient" />
-   <!-- <add name="DefaultConnection" connectionString="Data source=192.168.0.122;Initial Catalog=IPSOFT100_ST;User ID=JHON;Password=JHON"
-      providerName="System.Data.SqlClient" />-->
-  <add name="IPSoft100_STEntities" connectionString="metadata=res://*/Models.ModelAsclepius.csdl|res://*/Models.ModelAsclepius.ssdl|res://*/Models.ModelAsclepius.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=INGSOFTWARE-CH\SQLEXPRESS;initial catalog=IPSoft100_ST;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+ 
+   <!-- <add name="DefaultConnection" connectionString="Data source=INGSOFTWARE-CH\SQLEXPRESS;Initial Catalog=Zero;User ID=sa;Password=sa" providerName="System.Data.SqlClient" />-->
+   <add name="DefaultConnection" connectionString="Data source=192.168.0.122,1433;Network Library=DBMSSOCN;Initial Catalog=IPSOFT100_ST;User ID=JHON;Password=JHON"
+      providerName="System.Data.SqlClient" />
+   <add name="IPSoft100_STEntities" connectionString="metadata=res://*/Models.ModelAsclepius.csdl|res://*/Models.ModelAsclepius.ssdl|res://*/Models.ModelAsclepius.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=INGSOFTWARE-CH\SQLEXPRESS;initial catalog=IPSoft100_ST;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+  
+    </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
