--- a/GestionIPS.Backend/Web.config
+++ b/GestionIPS.Backend/Web.config
@@ -11,9 +11,18 @@
   <connectionStrings>
  
    <!-- <add name="DefaultConnection" connectionString="Data source=INGSOFTWARE-CH\SQLEXPRESS;Initial Catalog=Zero;User ID=sa;Password=sa" providerName="System.Data.SqlClient" />-->
-   <add name="DefaultConnection" connectionString="Data source=192.168.0.122,1433;Network Library=DBMSSOCN;Initial Catalog=IPSOFT100_ST;User ID=JHON;Password=JHON"
+   
+    <!--Dentro de la red Local-->
+    <add name="DefaultConnection" connectionString="Data source=192.168.0.122,1433;Network Library=DBMSSOCN;Initial Catalog=IPSOFT100_ST;User ID=JHON;Password=JHON"
       providerName="System.Data.SqlClient" />
    <add name="IPSoft100_STEntities" connectionString="metadata=res://*/Models.ModelAsclepius.csdl|res://*/Models.ModelAsclepius.ssdl|res://*/Models.ModelAsclepius.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=INGSOFTWARE-CH\SQLEXPRESS;initial catalog=IPSoft100_ST;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+   
+
+    <!--Conexión Remota Somme
+    <add name="DefaultConnection" connectionString="Data source=190.242.109.130,4567;Network Library=DBMSSOCN;Initial Catalog=IPSOFT100_ST;User ID=JHON;Password=JHON"
+      providerName="System.Data.SqlClient" />
+    <add name="IPSoft100_STEntities" connectionString="metadata=res://*/Models.ModelAsclepius.csdl|res://*/Models.ModelAsclepius.ssdl|res://*/Models.ModelAsclepius.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=INGSOFTWARE-CH\SQLEXPRESS;initial catalog=IPSoft100_ST;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    -->
 
   
     </connectionStrings>
